# three-dee-files-rest-api

./: Cargo.toml  Dockerfile  azure-pipelines.yml  docker-compose.yml
assets/: postgres.conf  postgres.sql  schema.sql
src/: database.rs  main.rs  models.rs  routes.rs
src/file/: common.rs  mod.rs
