[package]
name = "three-dee-files-rest-api"
version = "0.1.0"
edition = "2021"
authors = ["Hannes Roever"]

[dependencies]
actix-web = "4"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.93"}
postgres = "*"
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
env_logger = "0.10.0"
log = "0.4"
futures = "0.3"
utoipa = { features = ["actix_extras"] }
utoipa-swagger-ui = { features = ["actix-web"] }


